<resources>
    <string name="app_name">Calculator</string>

    <string name="result_default">0</string>

    <string name="buttonPlus">+</string>
    <string name="buttonSub">-</string>
    <string name="buttonMutiply">x</string>
    <string name="buttonDivide">/</string>
    <string name="buttonClear">AC</string>
    <string name="buttonResult">=</string>

    <string name="buttonZero">0</string>

    <string name="buttonOne">1</string>
    <string name="buttonTwo">2</string>
    <string name="buttonThree">3</string>


    <string name="buttonFour">4</string>
    <string name="buttonFive">5</string>
    <string name="buttonSix">6</string>

    <string name="buttonSeven">7</string>
    <string name="buttonEight">8</string>
    <string name="buttonNine">9</string>
    <string name="item_menu_clear">Clear</string>
    <string name="item_menu_save_result">Save Last Result</string>
    <string name="preference_file_key">Recovery result</string>
    <string name="preference_object_key">result</string>
    <string name="textview_screen">0</string>
    <string name="buttonCT">+/-</string>
    <string name="buttonPercent">%</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="buttonDot">.</string>
</resources>
