<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#757575"
    tools:context="com.example.hungdev.calculator.MainActivity">

    <RelativeLayout
        android:id="@+id/console"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        >
        <TextView
            android:id="@+id/txtDisplays"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="70sp"
            android:textColor="@color/textColorWhite"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:singleLine="true"
            android:maxLength="8"
            android:text="@string/textview_screen"/>
    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/console"
        android:orientation="vertical"
        android:weightSum="5">
        <LinearLayout
            style="@style/ContainerKeyTheme"
            >
            <Button
                android:id="@+id/buttonAC"
                style="@style/ButtonTheme"
                android:text="@string/buttonClear"
                />
            <Button
                android:id="@+id/buttonCT"
                style="@style/ButtonTheme"
                android:text="@string/buttonCT"
                />
            <Button
                android:id="@+id/buttonPercent"
                style="@style/ButtonTheme"
                android:text="@string/buttonPercent"
                />
            <Button
                android:id="@+id/buttonDivide"
                style="@style/ButtonTheme"
                android:text="@string/buttonDivide"
                android:background="@color/background_operator"
                />
        </LinearLayout>
        <LinearLayout
            style="@style/ContainerKeyTheme">
            <Button
                android:id="@+id/buttonSeven"
                style="@style/ButtonTheme"
                android:text="@string/buttonSeven"
                />
            <Button
                android:id="@+id/buttonEight"
                style="@style/ButtonTheme"
                android:text="@string/buttonEight"
                />
            <Button
                android:id="@+id/buttonNine"
                style="@style/ButtonTheme"
                android:text="@string/buttonNine"
                />
            <Button
                android:id="@+id/buttonMult"
                style="@style/ButtonTheme"
                android:background="@color/background_operator"
                android:text="@string/buttonMutiply"
                />
        </LinearLayout>
        <LinearLayout
            style="@style/ContainerKeyTheme">
            <Button
                android:id="@+id/buttonFour"
                style="@style/ButtonTheme"
                android:text="@string/buttonFour"
                
                />
            <Button
                android:id="@+id/buttonFive"
                style="@style/ButtonTheme"
                android:text="@string/buttonFive"
                />
            <Button
                android:id="@+id/buttonSix"
                style="@style/ButtonTheme"
                android:text="@string/buttonSix"
                />
            <Button
                android:id="@+id/buttonSub"
                style="@style/ButtonTheme"
                android:text="@string/buttonSub"
                android:background="@color/background_operator"
                />
        </LinearLayout>
        <LinearLayout
            style="@style/ContainerKeyTheme"
            >
            <Button
                android:id="@+id/buttonOne"
                style="@style/ButtonTheme"
                android:text="@string/buttonOne"

                />
            <Button
                android:id="@+id/buttonTwo"
                style="@style/ButtonTheme"
                android:text="@string/buttonTwo"
                />
            <Button
                android:id="@+id/buttonThree"
                style="@style/ButtonTheme"
                android:text="@string/buttonThree"
                />
            <Button
                android:id="@+id/buttonAdd"
                style="@style/ButtonTheme"
                android:background="@color/background_operator"
                android:text="@string/buttonPlus"
                
                />

        </LinearLayout>
        <LinearLayout
            style="@style/ContainerKeyTheme">

            <Button
                android:id="@+id/buttonZero"
                style="@style/ButtonTheme"
                android:layout_weight="2"
                android:text="@string/buttonZero"
                
                

                />
            <Button
                android:id="@+id/buttonDot"
                style="@style/ButtonTheme"
                android:text="@string/buttonDot"
                
                />
            <Button
                android:id="@+id/buttonEqual"
                style="@style/ButtonTheme"
                android:text="@string/buttonResult"
                android:background="@color/background_operator"
                
                />

        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
